Support order dependency detection